
####   Don't forget to change the version number in configure.ac!   ####

03 Dec 2005 CMPSC no siblings check after 4th/5th child - Bernard/Jacques Dilbert
02 Dec 2005 Added 'conspawn.exe' to MSVC build (for 'sh'ell cmd) - Fish
01 Dec 2005 Volker fix to MSVC makefile for VS 8.0 "manifest" files - Fish
01 Dec 2005 dyngui: SetCurrentDirectory support for shell commands - Fish
01 Dec 2005 Fix things so BOTH print-to-pipe AND 'sh'ell command work - Fish
29 Nov 2005 build_msc/45, printer/24: Poor man's fork for MSVC builds - Fish
28 Nov 2005 enable ATTR_REGPARM performance option for MSVC builds - Fish
28 Nov 2005 enable machine assists in machdep.h for MSVC VC7 compiler - Fish
28 Nov 2005 Fix concpy bug discovered by Fish - Greg Smith
27 Nov 2005 drop support for MSVC static/dll builds; keep only dllmod - Fish
27 Nov 2005 Drop support for makefile.msvc and makefile-dll.msvc - Roger Bowler
27 Nov 2005 Replace crypto support modules by BSD licensed versions - Roger Bowler
26 Nov 2005 Modify status line in panel.c for ESA/390 under z/SIE - Jan Jaeger
24 Nov 2005 Accept "z/Arch" as synonym for "ESAME" archmode - Fish
24 Nov 2005 hbyteswp.h: MSVC workaround for PR# emul/4 - Fish
24 Nov 2005 Fix some very minor glitches in new panel displays - Fish
24 Nov 2005 Report #of processors in hostinfo struct for non-MSVC - Fish
23 Nov 2005 Fix "LNK4099 libcmt.pdb not found" in MSVC static build - Roger Bowler
22 Nov 2005 dyninst module now built in MSVC DLL-MOD version - Ivan Warren
22 Nov 2005 Crypto module now built in MSVC DLL-MOD version - Ivan Warren
21 Nov 2005 Added skeletal ptff - Bernard van der Helm
21 Nov 2005 STSI MP fix - Greg
21 Nov 2005 diag204 fix, STSI capability fix - Jan Jaeger
20 Nov 2005 trace.c: minor fix to PR format-9 trace entry - Fish
20 Nov 2005 configure.ac, hstdinc.h: Apple OS X build fixes - Fish
20 Nov 2005 Correct cpu capability value in STSI - Fish
20 Nov 2005 Reject any intrusive diagnose when diag8cmd is off - Jan Jaeger